--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "yJ_profile_20250416.JPG"
   name             : "Yilun Jiang"
   pronouns         : "he/him" # example: "she/her"  
   bio              : "Scene Generation and Spatial Computing in AECO 🔬🏗️👽"
